Fixed some tests, 1 still failing